--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="papaparse.js"></script>
-    <script src="geoguesser.js" type="module"></script>
+    <script src="geoguesser.js" type="text/javascript"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsR_Nn7SAs8weVochOd_sf0o_sNBtjja4&callback=initialize">
