private api keys

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="geoguesser.js" type="text/javascript"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=APIKEY&callback=initialize">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsR_Nn7SAs8weVochOd_sf0o_sNBtjja4&callback=initialize">
     </script>
     
 
